src/test/deca/context/invalid/created/rule3.51/modulo_float.deca
// Résultat exécution ima
//  57
//
// Description:
//    tests d'exécution d'un programme correct par ima
//
// Auteur:
//    Jules
//
// Historique:
//    cree le 22/01/2024

{
    float reste = 9.0 % 2.2;
    printlnx(reste);
}